# advent-of-code-2021

./: Cargo.toml
input/: p7.txt
src/: lib.rs
