[package]
name = "aoc"
version = "0.1.0"
authors = ["Matthew Kuo <matthew.kuo@dialexa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
path = "src/bin/p1_1.rs"
name = "p1_1"

[[bin]]
path = "src/bin/p1_2.rs"
name = "p1_2"

[[bin]]
path = "src/bin/p2.rs"
name = "p2"

[[bin]]
path = "src/bin/p3_1.rs"
name = "p3_1"

[[bin]]
path = "src/bin/p4_1.rs"
name = "p4_1"

[[bin]]
path = "src/bin/p4_2.rs"
name = "p4_2"

[[bin]]
path = "src/bin/p5_1.rs"
name = "p5_1"

[[bin]]
path = "src/bin/p5_2.rs"
name = "p5_2"

[[bin]]
path = "src/bin/p6_1.rs"
name = "p6_1"

[[bin]]
path = "src/bin/p6_2.rs"
name = "p6_2"

[[bin]]
path = "src/bin/p7_1.rs"
name = "p7_1"

[[bin]]
path = "src/bin/p7_2.rs"
name = "p7_2"
